Fix locks